<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.PopularMoviesFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/search_view_background"
        app:searchIcon="@drawable/search_icon"
        android:layoutDirection="rtl"
        android:hint="@string/search_hint"
        app:queryHint="@string/search_hint"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popularRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/my_blue"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar_background"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/errorImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/error_icon"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="280dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorImageView"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/error_text"
        android:textSize="14sp"
        android:textColor="@color/my_blue"
        android:layout_marginTop="14dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:visibility="gone"/>
    
    <Button
        android:id="@+id/errorRepeatButton"
        android:layout_width="124dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorTextView"
        android:backgroundTint="@color/my_blue"
        android:text="@string/error_repeat"
        android:textAllCaps="false"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_background"
        android:visibility="gone"/>

    <Button
        android:id="@+id/popularButton"
        android:layout_width="155dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/my_blue"
        android:text="@string/favorite"
        android:textAllCaps="false"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/popularRecyclerView"
        android:background="@drawable/button_background" />

    <Button
        android:id="@+id/favoriteButton"
        android:layout_width="155dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/my_favorite_btn"
        android:text="@string/popular"
        android:textAllCaps="false"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/popularRecyclerView"
        android:background="@drawable/favorite_button_background" />

</androidx.constraintlayout.widget.ConstraintLayout>